# tflite_minimum_demo

./: CMakeLists.txt  README.md  main.cpp
include/: utils.hpp
src/: utils.cpp
